# de-challenge

./: .gitignore  .pre-commit-config.yaml  Makefile  ci-profiles.yml  pyproject.toml  readme.md  values.yaml
.github/workflows/: airflow.yml
airflow/dags/: .airflowignore  events_pipeline.py  test_dags.py
airflow/dags/python_scripts/: create_postgres_table.py  load_events_to_table.py  queries.py
instapro_dbt/: dbt_project.yml
instapro_dbt/models/: sources.yml
instapro_dbt/models/analysis/: availability_snapshot.sql
instapro_dbt/models/dim/: dim_date.sql  dim_professionals.sql  dim_services.sql  schema.yml
instapro_dbt/models/fact/: fct_events.sql
manifests/: logs-pvc.yaml  secrets.templates.yaml  secrets.yaml  values.yaml
