[tool.poetry]
name = "de-challenge"
version = "0.1.0"
description = ""
authors = ["sannytee <tywosanni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
pylint = "^2.17.4"
dbt-postgres = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
